--- a/index.html
+++ b/index.html
@@ -5,62 +5,207 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+
     <link rel="stylesheet" href="style/dist.css" />
 
     <title>John Cross Art</title>
 </head>
 
 <body>
-    <div class="container">
-        <div class="row mt-3">
+    <div class="container-fluid">
+        <div class="mt-3 mt">
+            <nav class=" navbar navbar-expand-sm navbar-light bg-light">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Gallery</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Comissions</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Pricing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+            <div class="card bg-light border-0 text-white"
+                style="padding-left: 1rem; padding-right: 1rem; padding-bottom: 1rem;"> <img
+                    class="card-img img-responsive" src="curvedroad.jpeg" alt="Card image">
+                <div class="card-img-overlay">
+                    <h1 class="card-title">John Cross Art</h1>
+                    <p class="card-text">Digital Photography and Artwork</p>
+                </div>
+            </div>
+
+            <div class="row" style="margin-left: 1rem;">
+                <!--Carousel Wrapper-->
+                <div id="multi-item-example" class="carousel slide carousel-multi-item carousel-multi-item-2"
+                    data-ride="carousel">
+                    <!--Controls-->
+                    <div class="controls-top">
+                        <a class="black-text" href="#multi-item-example"
+                            style="color: rgba(0, 0, 0, .7); float: left; padding-bottom: 1rem;" data-slide="prev"><i
+                                class="fas fa-angle-left fa-3x pr-3"></i></a>
+                        <a class="black-text" href="#multi-item-example"
+                            style="color: rgba(0, 0, 0, .7); float: right; margin-right: 2rem;" data-slide="next"><i
+                                class="fas fa-angle-right fa-3x pl-3"></i></a>
+                    </div>
+                    <!--/.Controls-->
+
+                    <!--Slides-->
+
+                    <div class="carousel-inner" style="margin: -1rem;" role="listbox">
+                        <!--First slide-->
+                        <div class="carousel-item active">
+                            <div class="col-md-3 mb-3">
+                                <div class="card">
+                                    <img class="img-fluid"
+                                        src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(38).jpg"
+                                        alt="Card image cap" />
+                                </div>
+                            </div>
+
+                            <div class="col-md-3 mb-3">
+                                <div class="card">
+                                    <img class="img-fluid"
+                                        src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(19).jpg"
+                                        alt="Card image cap" />
+                                </div>
+                            </div>
+
+                            <div class="col-md-3 mb-3">
+                                <div class="card">
+                                    <img class="img-fluid"
+                                        src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(42).jpg"
+                                        alt="Card image cap" />
+                                </div>
+                            </div>
+
+                            <div class="col-md-3 mb-3">
+                                <div class="card">
+                                    <img class="img-fluid"
+                                        src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(8).jpg"
+                                        alt="Card image cap" />
+                                </div>
+                            </div>
+                        </div>
+                        <!--/.First slide-->
+
+                        <!--Second slide-->
+                        <div class="carousel-item">
+                            <div class="col-md-3 mb-3">
+                                <div class="card">
+                                    <img class="img-fluid"
+                                        src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(53).jpg"
+                                        alt="Card image cap" />
+                                </div>
+                            </div>
+
+                            <div class="col-md-3 mb-3">
+                                <div class="card">
+                                    <img class="img-fluid"
+                                        src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(25).jpg"
+                                        alt="Card image cap" />
+                                </div>
+                            </div>
+
+                            <div class="col-md-3 mb-3">
+                                <div class="card">
+                                    <img class="img-fluid"
+                                        src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(47).jpg"
+                                        alt="Card image cap" />
+                                </div>
+                            </div>
+
+                            <div class="col-md-3 mb-3">
+                                <div class="card">
+                                    <img class="img-fluid"
+                                        src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(26).jpg"
+                                        alt="Card image cap" />
+                                </div>
+                            </div>
+                        </div>
+                        <!--/.Second slide-->
+
+                        <!--Third slide-->
+                        <div class="carousel-item">
+                            <div class="col-md-3 mb-3">
+                                <div class="card">
+                                    <img class="img-fluid"
+                                        src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(64).jpg"
+                                        alt="Card image cap" />
+                                </div>
+                            </div>
+
+                            <div class="col-md-3 mb-3">
+                                <div class="card">
+                                    <img class="img-fluid"
+                                        src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(51).jpg"
+                                        alt="Card image cap" />
+                                </div>
+                            </div>
+
+                            <div class="col-md-3 mb-3">
+                                <div class="card">
+                                    <img class="img-fluid"
+                                        src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(59).jpg"
+                                        alt="Card image cap" />
+                                </div>
+                            </div>
+
+                            <div class="col-md-3 mb-3">
+                                <div class="card">
+                                    <img class="img-fluid"
+                                        src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(63).jpg"
+                                        alt="Card image cap" />
+                                </div>
+                            </div>
+                        </div>
+                        <!--/.Third slide-->
+                    </div>
+                    <!--/.Slides-->
+                </div>
+                <!--/.Carousel Wrapper-->
+            </div>
+        </div>
+
+        <!-- The code below is from Mike's example -->
+        <!-- <div class="row mt-3">
             <div class="col-6">
-                <p>
-                    One morning, when Gregor Samsa woke from troubled dreams, he
-                    found himself transformed in his bed into a horrible vermin.
-                    He lay on his armour-like back, and if he lifted his head a
-                    little he could see his brown belly, slightly domed and
-                    divided by arches into stiff sections. The bedding was hardly
-                    able to cover it and seemed ready to slide off any moment. His
-                    many legs, pitifully thin compared with the size of the rest
-                    of him, waved about helplessly as he looked. "What's happened
-                    to me?" he thought. It wasn't a dream. His room, a proper
-                    human room although a little too small, lay peacefully between
-                    its four familiar walls. A collection of textile samples lay
-                    spread out on the table - Samsa was a travelling salesman -
-                    and above it there hung a picture that he had recently cut out
-                    of an illustrated magazine and housed in a nice, gilded frame.
-                    It showed a lady fitted out with a fur hat and fur boa who sat
-                    upright, raising a heavy fur muff that covered the whole of
-                    her lower arm towards the viewer. Gregor then turned to look
-                    out the window at the dull weather. Drops
-                </p>
+
                 <button class="btn btn-danger">Delete</button>
             </div>
             <div class="col-6">
-                <p>
-                    One morning, when Gregor Samsa woke from troubled dreams, he
-                    found himself transformed in his bed into a horrible vermin.
-                    He lay on his armour-like back, and if he lifted his head a
-                    little he could see his brown belly, slightly domed and
-                    divided by arches into stiff sections. The bedding was hardly
-                    able to cover it and seemed ready to slide off any moment. His
-                    many legs, pitifully thin compared with the size of the rest
-                    of him, waved about helplessly as he looked. "What's happened
-                    to me?" he thought. It wasn't a dream. His room, a proper
-                    human room although a little too small, lay peacefully between
-                    its four familiar walls. A collection of textile samples lay
-                    spread out on the table - Samsa was a travelling salesman -
-                    and above it there hung a picture that he had recently cut out
-                    of an illustrated magazine and housed in a nice, gilded frame.
-                    It showed a lady fitted out with a fur hat and fur boa who sat
-                    upright, raising a heavy fur muff that covered the whole of
-                    her lower arm towards the viewer. Gregor then turned to look
-                    out the window at the dull weather. Drops
-                </p>
+
                 <button class="btn btn-primary">Accept</button>
             </div>
-        </div>
+        </div> -->
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+    </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+    </script>
+
 </body>
 
 </html>
