added original photography

--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
                             <a class="nav-link" href="#">Contact</a>
                         </li>
                     </ul>
+
+
                 </div>
             </nav>
             <div class="card bg-light border-0 text-white"
                 style="padding-left: 1rem; padding-right: 1rem; padding-bottom: 1rem;"> <img
-                    class="card-img img-responsive" src="curvedroad.jpeg" alt="Card image">
+                    class="card-img img-responsive" src="waveclouds.jpeg" alt="Card image">
                 <div class="card-img-overlay">
                     <h1 class="card-title">John Cross Art</h1>
                     <p class="card-text">Digital Photography and Artwork</p>
@@ -73,33 +75,25 @@
                         <div class="carousel-item active">
                             <div class="col-md-3 mb-3">
                                 <div class="card">
-                                    <img class="img-fluid"
-                                        src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(38).jpg"
-                                        alt="Card image cap" />
+                                    <img class="img-fluid" src="horse.jp2" alt="Card image cap" />
                                 </div>
                             </div>
 
                             <div class="col-md-3 mb-3">
                                 <div class="card">
-                                    <img class="img-fluid"
-                                        src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(19).jpg"
-                                        alt="Card image cap" />
+                                    <img class="img-fluid" src="leaves.jpg" alt="Card image cap" />
                                 </div>
                             </div>
 
                             <div class="col-md-3 mb-3">
                                 <div class="card">
-                                    <img class="img-fluid"
-                                        src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(42).jpg"
-                                        alt="Card image cap" />
+                                    <img class="img-fluid" src="spider.jpg" alt="Card image cap" />
                                 </div>
                             </div>
 
                             <div class="col-md-3 mb-3">
                                 <div class="card">
-                                    <img class="img-fluid"
-                                        src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(8).jpg"
-                                        alt="Card image cap" />
+                                    <img class="img-fluid" src="trenchcoat.jpg" alt="Card image cap" />
                                 </div>
                             </div>
                         </div>
@@ -109,33 +103,25 @@
                         <div class="carousel-item">
                             <div class="col-md-3 mb-3">
                                 <div class="card">
-                                    <img class="img-fluid"
-                                        src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(53).jpg"
-                                        alt="Card image cap" />
+                                    <img class="img-fluid" src="underflowers.jpg" alt="Card image cap" />
                                 </div>
                             </div>
 
                             <div class="col-md-3 mb-3">
                                 <div class="card">
-                                    <img class="img-fluid"
-                                        src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(25).jpg"
-                                        alt="Card image cap" />
+                                    <img class="img-fluid" src="mask.jpeg" alt="Card image cap" />
                                 </div>
                             </div>
 
                             <div class="col-md-3 mb-3">
                                 <div class="card">
-                                    <img class="img-fluid"
-                                        src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(47).jpg"
-                                        alt="Card image cap" />
+                                    <img class="img-fluid" src="monks.jpeg" alt="Card image cap" />
                                 </div>
                             </div>
 
                             <div class="col-md-3 mb-3">
                                 <div class="card">
-                                    <img class="img-fluid"
-                                        src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(26).jpg"
-                                        alt="Card image cap" />
+                                    <img class="img-fluid" src="bomb.jpeg" alt="Card image cap" />
                                 </div>
                             </div>
                         </div>
@@ -145,33 +131,25 @@
                         <div class="carousel-item">
                             <div class="col-md-3 mb-3">
                                 <div class="card">
-                                    <img class="img-fluid"
-                                        src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(64).jpg"
-                                        alt="Card image cap" />
+                                    <img class="img-fluid" src="elephant.jpeg" alt="Card image cap" />
                                 </div>
                             </div>
 
                             <div class="col-md-3 mb-3">
                                 <div class="card">
-                                    <img class="img-fluid"
-                                        src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(51).jpg"
-                                        alt="Card image cap" />
+                                    <img class="img-fluid" src="child.jpeg" alt="Card image cap" />
                                 </div>
                             </div>
 
                             <div class="col-md-3 mb-3">
                                 <div class="card">
-                                    <img class="img-fluid"
-                                        src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(59).jpg"
-                                        alt="Card image cap" />
+                                    <img class="img-fluid" src="tree.jpg" alt="Card image cap" />
                                 </div>
                             </div>
 
                             <div class="col-md-3 mb-3">
                                 <div class="card">
-                                    <img class="img-fluid"
-                                        src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(63).jpg"
-                                        alt="Card image cap" />
+                                    <img class="img-fluid" src="curvedroad.jpeg" alt="Card image cap" />
                                 </div>
                             </div>
                         </div>
